compiler/e2e/test/snapshot/semantic_element/wf_check/trait_occurrences/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
  ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/trait_occurrences/main.pnx:6:31
  │
6 │     public first: Foo['a, T]::Output
  │                               ^^^^^^ the predicate `trait main::Foo['a, T]` is not satisfied

error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/trait_occurrences/main.pnx:13:31
   │
13 │     public first: Foo['b, T]::Output
   │                               ^^^^^^ the predicate `'a: 'b` is not satisfied

error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/trait_occurrences/main.pnx:13:31
   │
13 │     public first: Foo['b, T]::Output
   │                               ^^^^^^ the predicate `'b: 'a` is not satisfied

error: Compilation aborted due to 3 error(s)



stdout:
